# dandelion

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CREDITS  CompilerFlags.cmake  README.md  pre-commit
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-release.yml  build.yml  remove-old-artifacts.yml
docs/: Doxyfile  build.dox  index.dox  startup.dox  structure.dox
docs/doxygen-awesome-css/: doxygen-awesome.css
docs/modules/: platform.dox  rendering.dox  ui.dox  utils.dox
docs/topics/: geometry.dox  simulation.dox
resources/shaders/: fragment.glsl  vertex.glsl
src/: main.cpp
src/geometry/: edge.cpp  face.cpp  halfedge.cpp  halfedge.h  halfedge_mesh.cpp  meshedit.cpp  vertex.cpp
src/platform/: gl.cpp  gl.hpp  platform.cpp  platform.h  shader.cpp  shader.hpp
src/render/: graphics_interface.h  rasterizer.cpp  rasterizer.h  rasterizer_mt.cpp  rasterizer_renderer.cpp  rasterizer_renderer.h  rasterizer_renderer_mt.cpp  render_engine.cpp  render_engine.h  shader.cpp  shader.h  triangle.cpp  triangle.h  whitted_renderer.cpp
src/scene/: camera.cpp  camera.h  group.cpp  group.h  light.cpp  light.h  object.cpp  object.h  scene.cpp  scene.h
src/simulation/: solver.cpp  solver.h
src/ui/: about.inc  controller.cpp  controller.h  help.inc  menubar.cpp  menubar.h  selection_helper.h  settings.h  toolbar.cpp  toolbar.h
src/utils/: aabb.cpp  aabb.h  bvh.cpp  bvh.h  formatter.hpp  json_serialize.cpp  json_serialize.hpp  kinetic_state.cpp  kinetic_state.h  linked_list.hpp  logger.cpp  logger.h  math.hpp  ray.cpp  ray.h  rendering.hpp  stb_image_wrapper.cpp
test/: CMakeLists.txt  basic_tests.cpp  geometry_tests.cpp  main.cpp
test/.cache/clangd/index/: basic_tests.cpp.C05FACE4999D6F17.idx  main.cpp.B5A3884930C18A46.idx
